feat: ensure the functionality of the category and specification modules
